add loading hint in UI

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 <body class="middle">
 	<input type="file" name="InputJsFile" id="InputJsFile"></br></br>
 	<button id="submitButton" onclick="MakePath()">submit</button><br/></br>
-	<div id="LoadingMessage" style="color: red;font-size: 17px;display: none">*Processing..</div>
+	<div id="LoadingMessage" style="color: red;font-size: 17px;display: none">* Processing. . .</div>
 	<div id="noFileMessage" style="color: red;font-size: 17px;display: none">*Choose file before submit.</div>
 
 </body>
