--- a/templates/index_2.html
+++ b/templates/index_2.html
@@ -16,7 +16,7 @@
 				<tr>
 					<td>{{forloop.counter}}</td>
 					<td><a href="#" id="show_1">{{key}}</td>
-					<td>{{key}}</a></td>
+					<!-- <td>{{key}}</a></td> -->
 					{% for v in values %}
 						<td>{{v}}</td>
 					{% endfor %}
